# WaterBench-MIKE21SW-SouthernNorthSea

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  stations.xlsx  ~$stations.xlsx
.preprocessing/: COmments.txt  download-copernicus-data.ipynb  output.txt  preprocess_stations.ipynb  stations.txt
.publish/: COmments.txt  README_input.md  README_output.md  checklist.md  zenodo_text.md  zip_output_input.ipynb  zip_output_input.py  zip_repo.py
code/: README.md  explore_full_spectral_model_result_data.ipynb  explore_full_spectrum_model_result_data.ipynb  explore_model_result_data.ipynb  explore_observation_data.ipynb  helper.py  model_validation_altimetry.ipynb  model_validation_currents.ipynb  model_validation_period_and_direction.ipynb  model_validation_waterlevel.ipynb  model_validation_wave_direction.ipynb  model_validation_wave_height.ipynb  model_validation_wave_period.ipynb  plotting.py  requirements.txt
data-preprocessing/: download-copernicus-data.ipynb  files_to_download.txt  output.txt  preprocess_stations.ipynb  station_coordinates.csv  stations.txt  stations_new.txt  stations_old.txt
figures/: Comments.txt
input/: Mesh_8000_elems.mesh
model/: DWF_Setup.sw  DWF_Setup_v1.sw
observations/: 6200144.csv  6200145.csv  6201045.csv  6201047.csv  6201059.csv  6202108.csv  AkkaertSouthwestBuoy.csv  DeutscheBuchtBuoy.csv  Europlatform2.csv  Europlatform3.csv  F16.csv  F3platform.csv  Fanoebugt.csv  J61.csv  K13a_.csv  K141_.csv  KeetenBoei.csv  L91_.csv  LichteilandGoeree1_.csv  MaeslantkeringZeezijdeNoordMeetpaal.csv  NieuwpoortBuoy.csv  (+21 more)
(+44 files in other folders)
