[project]
name = "waterbench-mike21sw-southernnorthsea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts==0.35.0",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipywidgets==8.1.7",
    "matplotlib==3.10.3",
    "mikeio==2.6.0",
    "modelskill==1.2.0",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "tensorboard==2.19.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "watobs",
    "geopandas",
    "dask",
    "copernicusmarine"
]
